# ChangeLog for sys-apps/util-linux
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.262 2009/05/10 21:02:47 vapier Exp $

  10 May 2009; Mike Frysinger <vapier@gentoo.org> util-linux-2.15.ebuild,
  +files/util-linux-2.15-cpuid-pic.patch:
  Fix building on hardened due to PIC/cpuid #269001 by Juergen Rose.

  09 May 2009; Tobias Klausmann <klausman@gentoo.org>
  util-linux-2.14.2.ebuild:
  Stable on alpha, bug #268765

  06 May 2009; Jeroen Roovers <jer@gentoo.org> util-linux-2.14.2.ebuild:
  Stable for HPPA (bug #268765).

  06 May 2009; Brent Baude <ranger@gentoo.org> util-linux-2.14.2.ebuild:
  Marking util-linux-2.14.2 ppc64 and ppc for bug 268765

*util-linux-2.15 (05 May 2009)

  05 May 2009; Mike Frysinger <vapier@gentoo.org> +util-linux-2.15.ebuild:
  Version bump.

  15 Feb 2009; Mike Frysinger <vapier@gentoo.org> util-linux-2.14.2.ebuild:
  Update loop-aes patch #258456.

  15 Feb 2009; Mike Frysinger <vapier@gentoo.org> util-linux-2.14.1.ebuild,
  util-linux-2.14.2.ebuild:
  Touchup wording on USE=loop-aes info.

*util-linux-2.14.2 (10 Feb 2009)

  10 Feb 2009; Mike Frysinger <vapier@gentoo.org> +util-linux-2.14.2.ebuild:
  Version bump.

  30 Dec 2008; Mike Frysinger <vapier@gentoo.org> util-linux-2.14.1.ebuild,
  util-linux-9999.ebuild:
  Depend on sys-libs/e2fsprogs-libs rather than sys-fs/e2fsprogs #249663.

  06 Dec 2008; Mike Frysinger <vapier@gentoo.org>
  +files/util-linux-2.14-AC_BIG_ENDIAN.patch, util-linux-2.14.1.ebuild:
  Add fix from upstream for missing call to AC_BIG_ENDIAN in configure.

  02 Dec 2008; Brent Baude <ranger@gentoo.org> util-linux-2.14.1.ebuild:
  stable ppc64, bug 249107

  02 Dec 2008; Raúl Porcel <armin76@gentoo.org> util-linux-2.14.1.ebuild:
  alpha/ia64/sparc stable wrt #249107

  30 Nov 2008; Markus Meier <maekke@gentoo.org> util-linux-2.14.1.ebuild:
  amd64/x86 stable, bug #249107
