@@ -1,7 +1,5 @@
 AUX crypto-loop.confd 412 RMD160 5e65febe9641a8362078fdae39b4ac955fb2e63b SHA1 2f881a24ff67115e74de7a11c66a34a745060864 SHA256 188c945e5e6c54cb14874057c625ff30b72fb33d3d5648e53de2f231a3375600
-AUX crypto-loop.confd.1 412 RMD160 5e65febe9641a8362078fdae39b4ac955fb2e63b SHA1 2f881a24ff67115e74de7a11c66a34a745060864 SHA256 188c945e5e6c54cb14874057c625ff30b72fb33d3d5648e53de2f231a3375600
 AUX crypto-loop.initd 1729 RMD160 fa53920677d793cf98cad994e4dabd53e53d8d04 SHA1 19d3b7c4aa95cdadde2f6fb81a391081eae04f42 SHA256 b8329250c865e79a1e761d713c2270c99d5fe96e0d5a7ca646946fab65c4b810
-AUX crypto-loop.initd.1 1729 RMD160 fa53920677d793cf98cad994e4dabd53e53d8d04 SHA1 19d3b7c4aa95cdadde2f6fb81a391081eae04f42 SHA256 b8329250c865e79a1e761d713c2270c99d5fe96e0d5a7ca646946fab65c4b810
 AUX util-linux-2.13-uclibc.patch 1627 RMD160 3c52bac5b792c3ee6ccf69324729793314f279af SHA1 d85ad97b602daec290cc28858269ae4bcc0666f3 SHA256 7f0c5dcf91d3143c99006ada59ccb7842427933ad14e39c88bfaa7985d91a392
 AUX util-linux-2.13.1-no-a.out.patch 659 RMD160 8398db67db7224038e51cd9febc239d0cd6072d7 SHA1 29573af66b0e1fd68cfacf7109ad8470fbebc432 SHA256 4b70927a0c635c514d2ee71a33d71e43292e70b4fcfaae2fc789383f3486b51b
 AUX util-linux-2.14-AC_BIG_ENDIAN.patch 6651 RMD160 19e09c9c00461306065c194188529ffb137e7c7f SHA1 1b51e7c12014e817a3125b6dcc5bef47cb344aac SHA256 77f699a5e648dd89126172ae4c36b99dac7b1eb146c6036d0373851fe71eb304
@@ -10,9 +8,10 @@ DIST util-linux-ng-2.14.1-20081015.diff.bz2 51788 RMD160 eb657a6e5a0cdd3545716ce
 DIST util-linux-ng-2.14.1.tar.bz2 2929618 RMD160 23484769f7b73aeb3170333e7656ae2c9613d380 SHA1 4b738db04b27278329af216b15e96752e5af8cc3 SHA256 bf289c5399ab78674d9662ff2906a63ab540e88bf8bb1d3c7326dc8b1bef802c
 DIST util-linux-ng-2.14.2-20090214.diff.bz2 51898 RMD160 9ea70000e907a5233419d882d2a0a65e1442fbc9 SHA1 f5be6295afa02d3123928ada854589995a549c5e SHA256 c281b8b0a7c1650129a32185e20816a6bc37b0a5363fc5a4a0a7953e4705627a
 DIST util-linux-ng-2.14.2.tar.bz2 2956769 RMD160 ae81ed940157a37b33170365ac77699ffb14e128 SHA1 8d5ba161627dcf9295cc649c46ea15c333ff6b68 SHA256 108e63e9a007f6a8c0eff841dd38e0fe3b635c98b35bfac2d89b4b1a1ce0630e
+DIST util-linux-ng-2.15-20090511.diff.bz2 54329 RMD160 55e872443de3b567a7fadc46f4a29882e26bc437 SHA1 c8399ccb99c4c27893dded3c67fe6bf5fceb5236 SHA256 899bcdd2aa92537009cee085b84afcd763a45cd2a7f22988369349e8c0d6392d
 DIST util-linux-ng-2.15.tar.bz2 10184100 RMD160 93df61ee935cd9a524df68b28bc4e3adcef8d3ef SHA1 7fe31e5e56fdccfa0433fcccb1b4ce147fbbfc17 SHA256 db4dcbf99d989a8f539d7521e9e64047367fa2ccdcbb91517cdec19693a41ffd
 EBUILD util-linux-2.14.1.ebuild 2858 RMD160 7e2e17aa3fdd70e0a69f772ea8afb869efd6d02f SHA1 fe71f6ab8ecc16a6dae2853df946d1e54ad071af SHA256 f96bd3f757bf1f249512238be0175162238c74f3198882d72f6423a7e14617c5
-EBUILD util-linux-2.14.2.ebuild 2732 RMD160 1be237144f240d8b1e4158e69f7be0d0cbac42e8 SHA1 6837ec08efafc77c002ece5919102d375ecfed26 SHA256 699110ea10cd3628912a92f6fcf9f67c4e50b89ea89e8540f47f9a483a11146a
-EBUILD util-linux-2.15.ebuild 2780 RMD160 f174b1984ce85898160eadf27665f71abbc25d2d SHA1 ba0e2ec46372aa16ce34a509f624743fdcc47fb5 SHA256 ccf41efe0b03785e2c0c15eacec0e04e1809c18f849238af1c3102cb96c648c0
-MISC ChangeLog 40019 RMD160 ae9d03152be6a6062e4407591f5b5a510f59e754 SHA1 93a352eeea564ff4319443c5b78943be14ad25e2 SHA256 e33824a2445f05b9e65ac5eb8dfa25fa91fafb730197bde48ec7dbe35449215f
+EBUILD util-linux-2.14.2.ebuild 2730 RMD160 5319b72c42781378b0f9ac5ff5de18cc06bb6f9e SHA1 add4f7dcc08479cce8845573247e8d2f72ae0688 SHA256 03e00052999a302ce493f85d5fcd78c86579f4aa4cdd055ef5eec2c69b02f931
+EBUILD util-linux-2.15.ebuild 2778 RMD160 538406533345e1887fea0e7ff4be7e32e8414a73 SHA1 a5d1f0d542cfc13b11b645be5328b9e67d3df7ec SHA256 588b25469b059912ce7b73c2e9f1f7f217e527302ad281ce31f93653de8b286a
+MISC ChangeLog 40248 RMD160 8d92797fe98c813d9401017a8aeff8cd47dab211 SHA1 d398e1e0d6a73779b0ecd37558c90a9b016c9b23 SHA256 f508c7d40fb60fb49b80baef043e57dd00c7141e630ad50113f6de7d56a9694c
 MISC metadata.xml 247 RMD160 233aa38a3ce28f169d18de949377c5c26f23bdff SHA1 b908dc27f495e4313a30a8883346d6cef6467f27 SHA256 4e9e787bd294b0810c142758275e148780035c7d00618e7808d34fe14f26c3b6
