@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/util-linux
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.262 2009/05/10 21:02:47 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.264 2009/05/13 19:28:32 maekke Exp $
+
+  13 May 2009; Markus Meier <maekke@gentoo.org> util-linux-2.14.2.ebuild:
+  amd64/x86 stable, bug #268765
+
+  11 May 2009; Mike Frysinger <vapier@gentoo.org> util-linux-2.15.ebuild:
+  Update loop-aes patch #268772 by Wilbur Pan.
 
   10 May 2009; Mike Frysinger <vapier@gentoo.org> util-linux-2.15.ebuild,
   +files/util-linux-2.15-cpuid-pic.patch:
